# light-example-rs

./: .gitignore  Cargo.toml  README.md  build.sh  release.sh
apps/demo-customer-profile-api/: Cargo.toml  openapi.yaml
apps/demo-customer-profile-api/config/: client.yml  server.yml  startup.yml  values.yml
apps/demo-customer-profile-api/src/: main.rs
apps/demo-insurance-claim-mcp-server/: Cargo.toml
apps/demo-insurance-claim-mcp-server/config/: server.yml  startup.yml  values.yml
apps/demo-insurance-claim-mcp-server/src/: main.rs
apps/demo-offer-decision-api/: Cargo.toml  openapi.yaml
apps/demo-offer-decision-api/config/: server.yml  startup.yml  values.yml
apps/demo-offer-decision-api/src/: main.rs
config-registry/demo-customer-profile-api/: values.yml
config-registry/demo-insurance-claim-mcp-server/: values.yml
config-registry/demo-offer-decision-api/: values.yml
docker/: Dockerfile  Dockerfile.dockerignore
