[workspace]
members = [
    "apps/demo-customer-profile-api",
    "apps/demo-insurance-claim-mcp-server",
    "apps/demo-offer-decision-api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Steve Hu <stevehu@gmail.com>"]
repository = "https://github.com/networknt/light-example-rs"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
light-axum = { path = "../light-fabric/frameworks/light-axum" }
light-runtime = { path = "../light-fabric/crates/light-runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
